# -_-

./: README.md  admin.py  admin_login_attempts.json  app.py  bot.py  bot_main.py  buffs.json  config.py  dashboard.py  delivery_image.py  handlers.py  import_data.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  shop_items.json  stats.json  test.py  user_data.py  users.json
assets/: shop_items.json
attached_assets/: __init__.py  app.py  bot.py  delivery_image.py  delivery_user_data.json  fixed_workflow.py  handlers.py  main.py  models.py  pyproject.toml  routes.py  shop_items.json  stats.py  styles.css  user_data.py
data/: shop_items.json  stats.json
instance/: delivery_bot.db
static/css/: custom.css
static/js/: dashboard.js  stats.js
telegram_bot/: __init__.py  bot.py  delivery_image.py  handlers.py
templates/: index.html  layout.html  stats.html  users.html
templates/admin/: dashboard.html  edit_user.html  login.html  users.html
